--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,14 @@
 /* styles go here */
+
+.field {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.fieldset {
+  margin-bottom: 20px;
+}
+
+.field:last-child {
+  margin-bottom: 0;
+}
